atom 1.0.6    09/20/2010

- Support for math.h expressions

atom 1.0.5    09/20/2010

- Deriving Enum for Type

atom 1.0.4    05/23/2010

- Added 'exactPhase'.  (Lee Pike)

atom 1.0.3    04/19/2010

- Reduced line length in C code generation.

atom 1.0.2    04/13/2010

- Fixed linear bug.

atom 1.0.1    03/17/2010

- Fixed debounce bug.
- Fixed Unit -I bug, change state name to test name.

atom 1.0.0    02/13/2010

- Set C99 types (stdbool.h, stdint.h).  Removed cType from code configuration.
- Removed (void) argument in generated functions.
- Moved variables and arrays into a single hierarchical structure to provide direct access to Atom state variables from C code.
- Pulled var' and friends (bool', word8', int64', etc.) out of the Atom monad.
- Pulled Unit.random out of the Atom monad.
- Unit.runTests returns exit codes 1 for YELLOW light and 2 for RED LIGHT.
- Added cStateName code configuration for naming state structure.  Defaults to "state".
- Generates header file to declare primary function and state structure.

atom 0.1.4    12/16/2009

- Added 'call' function. 
- Bug fix to float and double variable initialization.
- Moved Language.Atom.Verification to new project: afv.

atom 0.1.3    12/03/2009

- Added linear lookup (Common). 
- Assertions and coverage points are checked between the execution of every rule, not just once per cycle.
- Removed cCover code configuration.  Assertions and coverage are enabled by cAssert.

atom 0.1.2    11/25/2009

- Added div0_ and mod0_ functions, that instrument runtime checks for divide-by-zero (Lee Pike).
- Added a phase function that specifies the earliest phase into a period a rule should execute (Lee Pike). 
- New scheduling algorithm to balance when rules fire across the period.
- Added support for Bits.rotate.
- Added check for empty design.

atom 0.1.1    09/29/2009

- Added ULL C constant annotations for rule scheduling.
- Created new Schedule type.
- compile returns schedule and coverage information.