@@ -1,5 +1,5 @@
 name:    atom
-version: 1.0.6
+version: 1.0.7
 
 category: Language
 
